# blepy

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: release.yml  staging-release.yml
blepy/: blepy.py  version.py
examples/: ble_uart.py  cpu_temperature.py
src/: application.py  bluez.py  characteristic.py  descriptor.py  main.py  runner.py  service.py
src/blepy/: __init__.py  blepy.py
src/utils/: recursivenamespace.py
