[metadata]
name = blepy-trinary
version = 0.1.0
author = Trinary Labs
author_email = f.v.carlsson@gmail.com
description = An class-based wrapper for 'bluezero' peripheral functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TrinaryLabs/blepy
project_urls =
    Bug Tracker = https://github.com/TrinaryLabs/blepy/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
[options]
package_dir =
    = blepy
packages = find:
python_requires = >=3.6
install_requires =
    bluezero == 0.6.0
[options.packages.find]
where = blepy